# ai-debug-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  railway.toml  render.yaml
app/: ai_service.py  database.py  main.py  models.py  security.py
style/: main.css
templates/: base.html  index.html  login.html  register.html
tests/: test_app.py
