[project]
name = "ai-debug-assistant"
version = "0.1.0"
description = "FastAPI SSR + Lightning AI Debug Assistant Platform (auth + telemetry logging)"
requires-python = ">=3.12"
dependencies = [
    # bcrypt pinned <4.1: passlib 1.7.4 reads bcrypt.__about__ which was
    # removed in bcrypt 4.1+, breaking password hashing. 4.0.1 is the last
    # compatible release.
    "bcrypt>=4.0.1,<4.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.3",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openai>=1.40.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
# This machine sources ROS (/opt/ros/jazzy) into PYTHONPATH, so the venv's
# pytest discovers ROS's setuptools entry-point plugins (launch_testing, the
# ament_* linters). launch_testing imports `lark`, which isn't a project dep,
# crashing collection. Disable those unrelated plugins so the suite needs no
# extra packages. `-p no:NAME` is a harmless no-op on machines without ROS.
addopts = "-p no:launch_testing -p no:launch_ros -p no:ament_pep257 -p no:ament_lint -p no:ament_flake8 -p no:ament_copyright"
